--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,9 @@
       "version": "16"
     }
   },
+  "plugins": [
+    "react-hooks"
+  ],
   "rules": {
     "space-before-function-paren": 0,
     "react/prop-types": 0,
@@ -37,6 +40,8 @@
       "error", {
         "prefixWithI": "always"
       }
-    ]
+    ],
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
